--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -5,17 +5,35 @@ input {
 }
 
 filter {
-  if [type] == "node-log" {
-    date {
-      match => [ "timestamp" , "dd/MMM/yyyy:HH:mm:ss Z" ]
+  mutate {
+    gsub => ["message", "\x1B\[([0-9]{1,2}(;[0-9]{1,2})?)?[m|K]", ""]
+  }
+  grok {
+    match => { "message" => "\[%{TIMESTAMP_ISO8601:access_time}\] \[DEBUG\] \[access\] \-\ %{HOSTNAME:clientip} %{DATA:userid} %{USERNAME:username} %{WORD:verb} %{NOTSPACE:request} %{NUMBER:status} %{URI:referrer} %{GREEDYDATA:agent} %{NUMBER:responseTime}" }
+  }
+  useragent {
+    source => "agent"
+  }
+  if [os_major]  {
+    mutate {
+      add_field => {
+        os_combine => "%{os} %{os_major}.%{os_minor}"
+      }
+    }
+  } else {
+    mutate {
+      add_field => {
+        os_combine => "%{os}"
+      }
     }
   }
 }
 
 output {
+  stdout { codec => rubydebug }
   elasticsearch {
     hosts => "docker.for.mac.localhost:9200"
-    index => "%{[@metadata][beat]}-%{+YYYY.MM.dd}"
-    document_type => "%{[@metadata][type]}"
+    index => "logstash-%{+YYYY.MM.dd}"
+    # document_type => "%{[@metadata][type]}"
   }
 }
